# suzuki

./: 1_小売業・日次商品KPIスナップショットSQL.sql  1_小売業・日次商品KPIスナップショットSQL_悪い例.sql  3_価格帯別 売上構造・価格感応度・異常検知_悪い例.sql  4_distribution_center 別 物流パフォーマンス.sql  無料相談アジェンダ.md
data_modeling/: salesforce_er_diagram.md
github_repos/: コミット数のバースト.sql  リポジトリ活動とライセンス相関.sql  リポジトリ特製.csv  リポジトリ特製.sql  開発スプリント.sql
google_analytics_sample/: bigquery_google_analytics_logs_practice.md  bigquery_google_analytics_logs_schema.md
python_practice/agenda/: client_and_bigquery_client.md  curriculum.md  lesson_01.md
python_practice/sample_csv_to_bq/: .gitignore  README.md  pyproject.toml
python_practice/sample_csv_to_bq/data/: sample_sales.csv
python_practice/sample_csv_to_bq/src/: bigquery_operations.py  load_csv_to_bigquery.py
python_practice/spark_practice/: README.md  basic_examples.py  dataframe_examples.py  employees.csv  lambda_expressions_guide.md  pyproject.toml  rdd_examples.py  spark_sql_examples.py
semantic_layer/: セマンティックレイヤー.md
semantic_layer/jaffle-shop/: pyproject.toml
semantic_layer/jaffle-shop/models/marts/: metricflow_time_spine.yml
thelook_ecommerce/: 2_.ユーザー別LTV・購買行動変化・優良顧客抽出.sql  2_ユーザー別LTV・購買行動変化・優良顧客抽出sql_悪い例.sql  3_価格帯別 売上構造・価格感応度・異常検知.sql  4_distribution_center 別 物流パフォーマンス_悪い例.sql  thelook_ecommerce_queries.txt  分析要件とメジャー・ディメンション.md
